# coffeco-instock-analysis

./: .gitignore  README.md  credentials.toml  pyproject.toml
data-analysis/: inventory.csv  visualize.ipynb
data_management/: __init__.py  collection.py  constants.py  user_authentication.py
data_management/database/: interface.py  wrapper.py
data_management/database/models/: model.py  product.py  product_data_entry.py  user.py
seller-dashboard/: package-lock.json  package.json
src/database/: interface.py
tests/: model_interaction.py  model_matching.py
