[tool.poetry]
name = "coffeco-amazonseller-api"
version = "0.1.0"
description = ""
authors = ["FuexFollets <fuex9follets@gmail.com>"]
readme = "README.md"
packages = [{include = "coffeco_amazonseller_api"}]

[tool.poetry.dependencies]
python = "^3.11"
python-amazon-sp-api = "^0.18.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
