[tool.poetry]
name = "coffeco-instock-analysis"
version = "0.1.0"
description = ""
authors = ["FuexFollets <fuex9follets@gmail.com>"]
readme = "README.md"
packages = [{include = "coffeco_amazonseller_api"}]

[tool.poetry.dependencies]
python = "^3.11"
python-amazon-sp-api = "^0.18.4"
apgorm = "^1.0.0b14"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
